feat: align skills system with spring-ai-agent-utils 0.7.0 (#250)
- Add classpath resource loading via new ReloadableSkillsTool constructor
  accepting List<Resource> alongside filesystem directory
- Read and propagate allowed-tools from skill frontmatter: when a skill
  declares allowed-tools (comma-separated), an <allowed-tools> constraint
  block is prepended to the skill response
- Expose getSkillModel() to read model preference from skill frontmatter
- Add 14 tests covering new functionality

Closes #250

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>